--- a/screen.html
+++ b/screen.html
@@ -31,6 +31,14 @@
             transition: visibility 0s 0s, opacity 0s linear;
         }
 
+		#topContainer{
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+		
         .rotate90 {
             -moz-transform-origin: 0 0;
             -ms-transform-origin: 0 0;
