fixing default bug introduced by previous fix
fixing default bug introduced by previous fix

--- a/screen.html
+++ b/screen.html
@@ -350,7 +350,7 @@ function scheduleCheckAndRun() {
 		} else {
 			currentplaylist = "";
 		}
-				
+		listplaystring = listplaylist.toString();		
 	} 
     }
     if (defaultpl.playlistId && currentplaylist.length < 1) {
