--- a/screen.html
+++ b/screen.html
@@ -28,7 +28,11 @@
             opacity: 0;
             transition: visibility 0s 0s, opacity 0s linear;
         }
-
+		.visibleimd {
+		    visibility: visible;
+            opacity: 1;
+            transition: visibility 0s 0s, opacity 0s linear;
+		}
 		#topContainer{
 			position: absolute;
 			top: 0;
@@ -112,7 +116,9 @@ var clearScreenTimer;
 var slideCounter=0;
 var listcounter;
 var listplaystring;
+var mmddyyyysec;
 var defaultmode = false;
+var overridemode = false;
 var days = ['sunday','monday','tuesday','wednesday','thursday','friday','saturday'];
 
 var CANVAS_WIDTH, CANVAS_HEIGHT;
@@ -168,27 +174,54 @@ function updateContentClass(data) {
 		  ucThreadNext();
 		}
 		if(json.type == "default"){
+			//alert("received defult");
 			if(json.playlistId) {
 				defaultpl = json;
 				if(defaultmode){
-					cleanListplaylist();
+					//alert("starting default from load");
 					startPlayList(json.playlistId, 0);
 				}
 			} else {
 				defaultpl = "";
+				if(defaultmode){
+					cleanUp();
+					cleanListplaylist();
+					clearTimeout(slideTimer);
+					listplaystring = "";
+					currentplaylist = "";
+				}
 			}
 			ucThreadNext();
 		}
 		if(json.type == "override"){
 		  override = json;
+		  //console.log(override);
+		  //alert("received override");
 		  if(override.playlistId){
-			cleanUp();
-			currentplaylist = override.playlistId;
-			defaultmode = false;
-			startPlayList(override.playlistId, 0);
+			//alert(override.playlistId +" " +override.end +" " + mmddyyyysec);
+			//alert((Date.parse(mmddyyyysec) < Date.parse(override.end)));
+			if((Date.parse(mmddyyyysec) < Date.parse(override.end))){
+				cleanUp();
+				cleanListplaylist();
+				currentplaylist = override.playlistId;
+				defaultmode = false;
+				overridemode = true;
+				//alert("starting override");
+				startPlayList(override.playlistId, 0);
+			}
 		  } else {
-			cleanUpDefault();
+			//alert("cleaning override");
 			override = "";
+			
+			if(overridemode){
+				cleanUp();
+				cleanListplaylist();
+				clearTimeout(slideTimer);
+				listplaystring = "";
+				currentplaylist = "";
+				//alert(currentplaylist.length);
+			}
+			overridemode = false;
 		  }
 		  ucThreadNext();
 		}
@@ -249,7 +282,7 @@ function refreshPlaylistArr(){
 						//console.log("inside second if");
 						listplaylist.push(schedules.playlists[j].id);
 					} */
-					console.log("numday == now.getUTCDay() || numday < now.getUTCDay()" + (numday == now.getUTCDay()) +"||"+ (numday < now.getUTCDay()));
+					//console.log("numday == now.getUTCDay() || numday < now.getUTCDay()" + (numday == now.getUTCDay()) +"||"+ (numday < now.getUTCDay()));
 					if(numday == now.getUTCDay() || numday > now.getUTCDay() ) {
 						if(convertToTimeStamp(now.getUTCDay() , format) < convertToTimeStamp(numday, schedules.playlists[j].end.time)) {
 							console.log("inside second if");
@@ -259,7 +292,7 @@ function refreshPlaylistArr(){
 				}
 			}
 		} catch (err){}
-		console.log(listplaylist);
+		//console.log(listplaylist);
 
 }
 function cleanListplaylist(){
@@ -316,7 +349,7 @@ function scheduleCheckAndRun() {
         sec = "0" + sec;
     }
     var ampm = hr < 12 ? "am" : "pm";
-    var mmddyyyysec = (month) + '/' + numday + '/' + now.getUTCFullYear() + " " + hr + ":" + min + ":" + sec;
+    mmddyyyysec = (month) + '/' + numday + '/' + now.getUTCFullYear() + " " + hr + ":" + min + ":" + sec;
     if (hr > 12) {
         hr = hr - 12;
     }
@@ -327,25 +360,30 @@ function scheduleCheckAndRun() {
 
     var date = now.getUTCDate();
     var format = hr + ":" + min + ":" + sec + " " + ampm;
-    //console.log(override);
-    if (override.playlistId) {
-        console.log("mmddyyyysec == override.end" + mmddyyyysec + " == " + override.end);
-        if (Date.parse(mmddyyyysec) > Date.parse(override.end)) {
-            clearTimeout(slideTimer);
-            currentplaylist = "";
-            currentslide = "";
-            cleanListplaylist();
-            override = "";
-        }
-    } else {
+	//console.log(override);
+    //console.log("mmddyyyysec == override.end" + mmddyyyysec + " == " + override.end + " mode: " + overridemode);
+	if(override.playlistId && (Date.parse(mmddyyyysec) > Date.parse(override.end))){
+		if(overridemode){
+			//console.log("mmddyyyysec == override.end" + mmddyyyysec + " == " + override.end);
+			clearTimeout(slideTimer);
+			currentplaylist = "";
+			currentslide = "";
+			overridemode = false;
+			listplaystring = "";
+			cleanListplaylist();
+		}
+		//override = "";
+	}
+    if (!(overridemode)) {
         refreshPlaylistArr();
-        console.log(listplaylist.toString() + "!=" + listplaystring);
+        //console.log(listplaylist.toString() + "!=" + listplaystring);
 
         
-	if(listplaylist.toString() != listplaystring) {
-		if(listplaylist.length>0 ){
-		//alert("changed schedule" + listplaylist.toString());
+		if(listplaylist.toString() != listplaystring) {
+			if(listplaylist.length>0 ){
+			//alert("changed schedule" + listplaylist.toString());
 			listplaystring = listplaylist.toString();
+			defaultmode = false;
 			rotatePlArray();
 		} else {
 			currentplaylist = "";
@@ -353,19 +391,26 @@ function scheduleCheckAndRun() {
 		listplaystring = listplaylist.toString();		
 	} 
     }
-    if (defaultpl.playlistId && currentplaylist.length < 1) {
+	//console.log(currentplaylist);
+    if (defaultpl.playlistId && currentplaylist.length < 1 && listplaystring.length < 1) {
         defaultmode = true;
+		//alert("starting default");
         startPlayList(defaultpl.playlistId, 0);
 
     }
+	
+	if(!(defaultpl.playlistId) && currentplaylist.length < 1 && listplaystring.length < 1){
+		clearScreen();
+	
+	}
     // exact ms to next minute interval
     setTimeout(scheduleCheckAndRun, 1000);
 }
 
 function startPlayList(pId, sc){
 	playlists.get(pId, function(playJson) {
-        console.log("playlist: ");
-		console.log(playJson.slides.length);
+        //console.log("playlist: " + pId);
+		//console.log(playJson.slides.length);
 		slideCounter=sc;
 		clearTimeout(slideTimer);
 		clearTimeout(effectTimer);
@@ -425,6 +470,8 @@ function renderPlayList(playJson){
 function renderSlide(sId, effect){
 	if(effect){
 		document.getElementById("viewport").className = "hiddenimd";document.getElementById("viewportmaster").className = "hiddenimd";
+	} else {
+		document.getElementById("viewport").className = "visibleimd";document.getElementById("viewportmaster").className = "visibleimd";
 	}
 	slides.get(sId, function(slideJson) {
 		if(slideJson){
@@ -537,6 +584,7 @@ function renderMSlide(sId, prerender, effect){
 		
     });
 
+	
 
 }
 
@@ -765,7 +813,7 @@ clearScreen();
 updateContent('{type: "playlist",id: 12312,"transitionMode": "fade-in-out", "slides":[	{"id": 46732, "timing": 6},{"id": 234,"timing": 6}, {"id": 34,"timing": 12}]}');
 updateContent('{type: "playlist",id: 123,"transitionMode": "fade-in-out", "slides":[	{"id": 34,"timing": 5}, {"id": 46732,"timing": 5}]}');
 
-updateContent('{	"type": "schedule",	"id": 643,"playlists":[{"id": 12312,"start": {"weekDay": "wednesday","time": "12:34:30 pm"},"end": {"weekDay": "friday",						"time": "12:51:30 pm"}},{"id": 123,"start": {"weekDay": "sunday","time": "9:45:12 pm"},"end": {"weekDay": "sunday","time": "11:00:00 pm"}}]}');
+updateContent('{	"type": "schedule",	"id": 643,"playlists":[{"id": 2,"start": {"weekDay": "wednesday","time": "12:34:30 pm"},"end": {"weekDay": "friday",						"time": "12:30:30 pm"}},{"id": 123,"start": {"weekDay": "sunday","time": "9:45:12 pm"},"end": {"weekDay": "sunday","time": "11:00:00 pm"}}]}');
 updateContent('{"type": "slide","isLandscape":false,"id": 46732,"masterSlideId": 27,"elements":[{"type": "text","left": "28.598484848484848%","top": "17.171717171717173%",		"width": "28.645833333333332%",	"height": "8.577441077441078%",	"source": "SLIDE this will be an encoded HTML </br>SLIDEID: 46732"},{"type": "image","left": "15.340909090909092%",	"top": "30.134680134680135%","width": "46.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"},{"type": "video","left":"33.90151515151515%","top": "33.333333333333336%","width": "46.041666666666668%","height": "47.77777777777778%","source": "example.mp4"}]}');
 updateContent('{"type": "slide","id": 234,"isLandscape":false,"masterSlideId": 27,"elements":[{"type": "text","left": "28.598484848484848%","top": "17.171717171717173%",		"width": "28.645833333333332%",	"height": "8.577441077441078%",	"source": "slide 234"},{"type": "image","left": "15.340909090909092%",	"top": "30.134680134680135%","width": "46.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"},{"type": "video","left":"3.90151515151515%","top": "3.333333333333336%","width": "76.041666666666668%","height": "77.77777777777778%","source": "example.mp4"}]}');
 updateContent('{"type": "slide","isLandscape":true,"id": 34,"elements":[{"type": "text","left": "8.598484848484848%","top": "7.171717171717173%",		"width": "28.645833333333332%",	"height": "8.577441077441078%",	"source": "&lt;span style=&quot;font-size: 680%; color: rgb(0, 0, 128); font-family: sancreekregular; background-color: rgb(255, 0, 0);&quot;&gt;San Creek&lt;/span&gt;"},{"type": "image","left": "15.340909090909092%",	"top": "30.134680134680135%","width": "46.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"}]}');
@@ -773,14 +821,20 @@ updateContent('{"type": "slide","isLandscape":true,"id": 34,"elements":[{"type":
 updateContent('{"type": "master-slide","id": 27,"elements":[{"type": "text","left": "18.598484848484848%","top": "7.171717171717173%",	"width":"28.645833333333332%","height": "8.577441077441078%","source": "<b>MASTER SLIDE</b> content"},{"type": "image","left": "15.340909090909092%",		"top": "30.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3300.JPG"},{"type": "image","left": "15.340909090909092%",		"top": "60.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3300.JPG"},{"type": "image","left": "40.340909090909092%",		"top": "30.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"},{"type": "video","left":"0.90151515151515%","top": "33.333333333333336%","width": "26.041666666666668%","height": "27.77777777777778%","source": "example.mp4"}]}');
 
 updateContent('{"type":"slide","id":1,"isLandscape":true,"elements":[{"type":"text","left":"20.201704718849875%","top":"35.72895550968671%","width":"28.645833333333332%","height":"6.565656565656566%","source":"&lt;span style=&quot;color: rgb(255, 255, 255); font-family: eraserregular; font-size: 440%;&quot;&gt;S1&lt;/span&gt;"},{"type":"text","left":"9.469696969696969%","top":"12.962962962962964%","width":"28.645833333333332%","height":"14.141414141414142%","source":"&lt;span style=&quot;font-size: 680%; color: rgb(0, 0, 128); font-family: sancreekregular; background-color: rgb(255, 0, 0);&quot;&gt;San Creek&lt;/span&gt;"}]}');
+updateContent('{"type":"slide","id":2,"isLandscape":true,"elements":[{"type":"text","left":"20.201704718849875%","top":"35.72895550968671%","width":"28.645833333333332%","height":"6.565656565656566%","source":"&lt;span style=&quot;color: rgb(255, 255, 255); font-family: eraserregular; font-size: 440%;&quot;&gt;S1&lt;/span&gt;"},{"type":"text","left":"9.469696969696969%","top":"12.962962962962964%","width":"28.645833333333332%","height":"14.141414141414142%","source":"&lt;span style=&quot;font-size: 680%; color: rgb(0, 0, 128); font-family: sancreekregular; background-color: rgb(255, 0, 0);&quot;&gt;Slide2&lt;/span&gt;"}]}');
 //setTimeout(function(){updateContent('{"type": "default","playlistId": 123}');}, 1000);
 //updateContent('{"type": "override","playlistId": 12312,"end": "09/24/2015 16:03:03"}');
 setTimeout(function(){updateContent('{type: "playlist",id: 123,"transitionMode": "fade-in-out", "slides":[	{"id": 34,"timing": 5},{"id": 46732,"timing": 5}]}');}, 10000);
-setTimeout(function(){updateContent('{type: "playlist",id: 123,"transitionMode": "fade-in-out", "slides":[	{"id": 234,"timing": 8}, {"id": 46732,"timing": 5} ]}');}, 15000);
+setTimeout(function(){updateContent('{type: "playlist",id: 123,"transitionMode": "none", "slides":[	{"id": 234,"timing": 8}, {"id": 46732,"timing": 5} ]}');}, 18000);
 updateContent('{"type":"playlist","id":1,"transitionMode":"none","slides":[{"id":1,"timing":10}]}');
+updateContent('{"type":"playlist","id":2,"transitionMode":"none","slides":[{"id":2,"timing":5}]}');
+
 //updateContent('{"type":"default","playlistId":1}');
     setTimeout(function(){updateContent('{"type":"default","playlistId":123}');}, 3000);
-
+    setTimeout(function(){updateContent('{"type":"override","playlistId":12312, "end":"09/05/2015 12:50:00"}');}, 5000);
+	setTimeout(function(){updateContent('{"type":"override", "end":"09/05/2015 11:60:00"}');}, 23000);
+	//setTimeout(function(){updateContent('{"type":"default"}');}, 13000);
+    
 
 //updateContent('{"type":"slide","id":1,"isLandscape":true,"elements":[{"type":"text", "left":"20.201704718849875%","top":"35.72895550968671%","width":"28.645833333333332%","height":"6.565656565656566%","source":"&lt;span style=&quot;color: rgb(255, 255, 255); font-family: eraserregular; font-size: 440%;&quot;&gt;S1&lt;/span&gt;"},{"type":"text","left":"9.469696969696969%","top":"12.962962962962964%","width":"28.645833333333332%","height":"14.141414141414142%","source":"&lt;span style=&quot;font-size: 680%; color: rgb(0, 0, 128); font-family: sancreekregular; background-color: rgb(255, 0, 0);&quot;&gt;San Creek&lt;/span&gt;"}]}');
 //updateContent('{"type":"playlist","id":1,"transitionMode":"none","slides":[{"id":1,"timing":10}]}');
