No content should display if default playlist is removed
No content should display if default playlist is removed

--- a/screen.html
+++ b/screen.html
@@ -187,6 +187,7 @@ function updateContentClass(data) {
 					cleanUp();
 					cleanListplaylist();
 					clearTimeout(slideTimer);
+					clearTimeout(effectTimer);
 					listplaystring = "";
 					currentplaylist = "";
 				}
