--- a/screen.html
+++ b/screen.html
@@ -786,6 +786,9 @@ function setOrientation(isLandscape) {
 
 	$(topContainer).height(CANVAS_HEIGHT);
 	$(topContainer).width(CANVAS_WIDTH);
+	
+	$(topContainer).css('top', '0');
+	$(topContainer).css('left', '0');
 
 	if (!isLandscape && isFlipped) {
 		$(topContainer).addClass('rotate270');
@@ -813,21 +816,20 @@ function setIsFlipped(isIt) {
 
 clearScreen();
 
-updateContent('{type: "playlist",id: 12312,"transitionMode": "fade-in-out", "slides":[	{"id": 46732, "timing": 6},{"id":234,"timing": 6}, {"id":34,"timing":12}]}');
-updateContent('{type: "playlist",id: 123,"transitionMode": "fade-in-out", "slides":[	{"id": 34,"timing": 9}, {"id": 46732,"timing": 9}]}');
+updateContent('{type: "playlist",id: 12312,"transitionMode": "fade-in-out", "slides":[	{"id": 46732, "timing": 6},{"id": 234,"timing": 6}, {"id": 34,"timing": 12}]}');
+updateContent('{type: "playlist",id: 123,"transitionMode": "fade-in-out", "slides":[	{"id": 34,"timing": 5}, {"id": 46732,"timing": 5}]}');
 
-updateContent('{"type": "slide","isLandscape":false,"id": 46732,"masterSlideId": 27,"elements":[{"type": "text","left":"28.598484848484848%","top": "17.171717171717173%",		"width": "28.645833333333332%",	"height": "8.577441077441078%",	"source": "SLIDE this will be an encoded HTML </br>SLIDEID: 46732"},{"type": "image","left": "15.340909090909092%",	"top": "30.134680134680135%","width": "46.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"},{"type": "video","left":"33.90151515151515%","top": "33.333333333333336%","width": "46.041666666666668%","height": "47.77777777777778%","source": "example.mp4"}]}');
+updateContent('{"type": "slide","isLandscape":false,"id": 46732,"masterSlideId": 27,"elements":[{"type": "text","left": "28.598484848484848%","top": "17.171717171717173%",		"width": "28.645833333333332%",	"height": "8.577441077441078%",	"source": "SLIDE this will be an encoded HTML </br>SLIDEID: 46732"},{"type": "image","left": "15.340909090909092%",	"top": "30.134680134680135%","width": "46.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"},{"type": "video","left":"33.90151515151515%","top": "33.333333333333336%","width": "46.041666666666668%","height": "47.77777777777778%","source": "example.mp4"}]}');
 updateContent('{"type": "slide","id": 234,"isLandscape":false,"masterSlideId": 27,"elements":[{"type": "text","left": "28.598484848484848%","top": "17.171717171717173%",		"width": "28.645833333333332%",	"height": "8.577441077441078%",	"source": "slide 234"},{"type": "image","left": "15.340909090909092%",	"top": "30.134680134680135%","width": "46.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"},{"type": "video","left":"3.90151515151515%","top": "3.333333333333336%","width": "76.041666666666668%","height": "77.77777777777778%","source": "example.mp4"}]}');
 updateContent('{"type": "slide","isLandscape":true,"id": 34,"elements":[{"type": "text","left": "8.598484848484848%","top": "7.171717171717173%",		"width": "28.645833333333332%",	"height": "8.577441077441078%",	"source": "&lt;span style=&quot;font-size: 680%; color: rgb(0, 0, 128); font-family: sancreekregular; background-color: rgb(255, 0, 0);&quot;&gt;San Creek&lt;/span&gt;"},{"type": "image","left": "15.340909090909092%",	"top": "30.134680134680135%","width": "46.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"}]}');
 
 updateContent('{"type": "master-slide","id": 27,"elements":[{"type": "text","left": "18.598484848484848%","top": "7.171717171717173%",	"width":"28.645833333333332%","height": "8.577441077441078%","source": "<b>MASTER SLIDE</b> content"},{"type": "image","left": "15.340909090909092%",		"top": "30.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3300.JPG"},{"type": "image","left": "15.340909090909092%",		"top": "60.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3300.JPG"},{"type": "image","left": "40.340909090909092%",		"top": "30.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"},{"type": "video","left":"0.90151515151515%","top": "33.333333333333336%","width": "26.041666666666668%","height": "27.77777777777778%","source": "example.mp4"}]}');
 
-updateContent('{"type":"slide","id":1,"isLandscape":true,"elements": [{"type":"text","left":"20.201704718849875%","top":"35.72895550968671%","width":"28.645833333333332%","height":"6.565656565656566%","source":"&lt;span style=&quot;color: rgb(255, 255, 255); font-family: eraserregular; font-size: 440%;&quot;&gt;S1&lt;/span&gt;"},{"type":"text","left":"9.469696969696969%","top":"12.962962962962964%","width":"28.645833333333332%","height":"14.141414141414142%","source":"&lt;span style=&quot;font-size: 680%; color: rgb(0, 0, 128); font-family: sancreekregular; background-color: rgb(255, 0, 0);&quot;&gt;San Creek&lt;/span&gt;"}]}');
-updateContent('{"type":"slide","id":2,"isLandscape":true,"elements":[{"type":"text","left":"20.201704718849875%","top":"35.72895550968671%","width":"28.645833333333332%","height":"6.565656565656566%","source":"&lt;span style=&quot;color: rgb(255, 255, 255); font-family: eraserregular; font-size: 440%;&quot;&gt;S1&lt;/span&gt;"},{"type":"text","left":"9.469696969696969%","top":"12.962962962962964%","width":"28.645833333333332%","height":"14.141414141414142%","source":"&lt;span style=&quot;font-size: 680%; color: rgb(0, 0, 128); font-family: sancreekregular; background-color: rgb(255, 0,0);&quot;&gt;Slide2&lt;/span&gt;"}]}');
+updateContent('{"type":"slide","id":1,"isLandscape":true,"elements":[{"type":"text","left":"20.201704718849875%","top":"35.72895550968671%","width":"28.645833333333332%","height":"6.565656565656566%","source":"&lt;span style=&quot;color: rgb(255, 255, 255); font-family: eraserregular; font-size: 440%;&quot;&gt;S1&lt;/span&gt;"},{"type":"text","left":"9.469696969696969%","top":"12.962962962962964%","width":"28.645833333333332%","height":"14.141414141414142%","source":"&lt;span style=&quot;font-size: 680%; color: rgb(0, 0, 128); font-family: sancreekregular; background-color: rgb(255, 0, 0);&quot;&gt;San Creek&lt;/span&gt;"}]}');
+updateContent('{"type":"slide","id":2,"isLandscape":true,"elements":[{"type":"text","left":"20.201704718849875%","top":"35.72895550968671%","width":"28.645833333333332%","height":"6.565656565656566%","source":"&lt;span style=&quot;color: rgb(255, 255, 255); font-family: eraserregular; font-size: 440%;&quot;&gt;S1&lt;/span&gt;"},{"type":"text","left":"9.469696969696969%","top":"12.962962962962964%","width":"28.645833333333332%","height":"14.141414141414142%","source":"&lt;span style=&quot;font-size: 680%; color: rgb(0, 0, 128); font-family: sancreekregular; background-color: rgb(255, 0, 0);&quot;&gt;Slide2&lt;/span&gt;"}]}');
 
 
-updateContent('{"type":"override","playlistId":123,"end": "10/05/2015 07:13:03"}');
-
+updateContent('{"type":"default","playlistId":123}');
 
 scheduleCheckAndRun();
 
