--- a/screen.html
+++ b/screen.html
@@ -713,7 +713,7 @@ function playVideos(aVideoElements){
 		var videos = getDivId.getElementsByTagName("video");
 		
 		for(var i=0; i<videos.length; i++) {
-			videos[i].loop = true;
+			
 			videos[i].autoplay = true;
 			videos[i].play();
 			// specialVideoPlay function
@@ -725,7 +725,7 @@ function playVideos(aVideoElements){
 		videos = getDivId.getElementsByTagName("video");
 		
 		for(var i=0; i<videos.length; i++) {
-			videos[i].loop = true;
+			
 			videos[i].autoplay = true;
 			videos[i].play();
 			// specialVideoPlay function
@@ -769,9 +769,10 @@ function renderElements(element, zi, prerender, aVideoElements){
 			DOM_vid.style.height = element.height;
 			DOM_vid.style.position = "absolute";
 			DOM_vid.style.zIndex =  zi;
+			DOM_vid.loop = element.loop;
+			
 			if(!prerender) {
 				DOM_vid.autoplay = true;
-				DOM_vid.loop = true;
 			}
 			container.appendChild(DOM_vid);
 		}
@@ -999,7 +1000,7 @@ updateContent('{"type":"default","playlistId":1111}');
 
 */
 
-updateContent('{"type": "master-slide","id": 27,"elements":[{"type": "text","left": "18.598484848484848%","top": "7.171717171717173%",	"width":"28.645833333333332%","height": "8.577441077441078%","source": "<b>MASTER SLIDE</b> content"},{"type": "image","left": "15.340909090909092%",		"top": "30.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3300.JPG"},{"type": "image","left": "15.340909090909092%",		"top": "60.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3300.JPG"},{"type": "image","left": "40.340909090909092%",		"top": "30.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"},{"type": "video","left":"0.90151515151515%","top": "33.333333333333336%","width": "26.041666666666668%","height": "27.77777777777778%","source": "example.mp4"}]}');
+updateContent('{"type": "master-slide","id": 27,"elements":[{"type": "text","left": "18.598484848484848%","top": "7.171717171717173%",	"width":"28.645833333333332%","height": "8.577441077441078%","source": "<b>MASTER SLIDE</b> content"},{"type": "image","left": "15.340909090909092%",		"top": "30.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3300.JPG"},{"type": "image","left": "15.340909090909092%",		"top": "60.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3300.JPG"},{"type": "image","left": "40.340909090909092%",		"top": "30.134680134680135%","width": "26.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"},{"type": "video","left":"0.90151515151515%","top": "33.333333333333336%","width": "26.041666666666668%","height": "27.77777777777778%","source": "example.mp4","play":"once"}]}');
 updateContent('{"type": "slide","id": 234,"isLandscape":true,"masterSlideId": 27,"elements":[{"type": "text","left": "28.598484848484848%","top": "17.171717171717173%",		"width": "28.645833333333332%",	"height": "8.577441077441078%",	"source": "slide 234"},{"type": "image","left": "15.340909090909092%",	"top": "30.134680134680135%","width": "46.515151515151516%","height": "47.138047138047135%","source": "DSCF3352_2.jpg"},{"type": "video","left":"3.90151515151515%","top": "3.333333333333336%","width": "76.041666666666668%","height": "77.77777777777778%","source": "example.mp4"}]}');
 
 
